# serial_protocol_python

./: .gitignore  LICENSE  README.md  cobs.html  environment.yml  genindex.html  index.html  objects.inv  packet.html  py-modindex.html  pyproject.toml  requirements-dev.txt  requirements.txt  search.html  searchindex.js  tlv.html  utils.html
.github/workflows/: build.yml  documentation.yml
_modules/: index.html
_modules/serial_protocol/: cobs.html  packet.html  tlv.html  utils.html
_sources/: index.rst.txt  tlv.rst.txt
docs/source/: cobs.rst  conf.py  index.rst  packet.rst  utils.rst
src/serial_protocol/: cobs.py  packet.py  tlv.py  utils.py
tests/: test_cobs.py  test_cobs_decode.py  test_cobs_encode.py  test_packet.py  test_tlv.py  test_utils.py
