[project]
name = "SerialProtocol_Python"
version = "0.0.0"
description = "A lightweight Python library for developing simple but robust serial protocols for embedded devices."
readme = "README.md"
requires-python = ">=3.12"
license = {file = "LICENSE.txt"}
keywords = ["Serial", "Protocol"]
authors = [
  {email = "jmount1992@gmail.com"},
  {name = "James Mount"}
]
maintainers = [
  {name = "James Mount", email = "jmount1992@gmail.com"}
]
classifiers = [
  "Programming Language :: Python"
]

dynamic = ["dependencies", "optional-dependencies"]

[tool.setuptools.dynamic]
dependencies = { file = ["requirements.txt"] }

[tool.setuptools.dynamic.optional-dependencies]
dev = { file = ["requirements-dev.txt"] }

[project.urls]
repository = "https://github.com/jmount1992/serial_protocol_python"